--- a/frontend/src/app/my-coffees/my-coffees.page.html
+++ b/frontend/src/app/my-coffees/my-coffees.page.html
@@ -9,6 +9,7 @@
     <ion-label>
       <h1>{{c.country}}</h1>
       <p>{{c.flavor}}</p>
+      <ion-button (click)="deleteCoffee(c.id)">borrar</ion-button>
     </ion-label>
   </ion-item>
 </ion-content>
