--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -28,14 +28,16 @@
 
 .tittle {
   display: flex;
-  color: red;
-  background-color: #1e1e1e;
+  color: black;
+  background-color: #9C6644;
   padding: 0.5em;
   justify-content: center;
 }
 
 .p{
-  padding-left: 1em;
+  display: flex;
+  justify-content: center;
+  padding: 0.5em;
 }
 
 .buttonContainer{
